force-app/main/default/objects/Call_Center_Compliance__c/Call_Center_Compliance__c.object-meta.xml
<CustomObject>
    <label>Call Center Compliance</label>
    <nameField>
        <displayFormat>Compliance-{0000}</displayFormat>
        <label>Call Center Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Center Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>