force-app/main/default/objects/Call_Center_Compliance__c/fields/Agent_caused_problem__c.field-meta.xml
<CustomField>
    <fullName>Agent_caused_problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent (caused problem)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Center_Compliance1</relationshipName>
    <type>Lookup</type>
</CustomField>