force-app/main/default/objects/Call_Center_Compliance__c/fields/Agent_identified_Problem__c.field-meta.xml
<CustomField>
    <fullName>Agent_identified_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent (identified Problem)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Center_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>