force-app/main/default/objects/Call_Center_Compliance__c/fields/Call_Center_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Notes__c</fullName>
    <label>Call Center Notes</label>
    <type>TextArea</type>
</CustomField>