force-app/main/default/objects/Call_Center_Compliance__c/fields/Compliance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Center_Compliance2</relationshipName>
    <type>Lookup</type>
</CustomField>