force-app/main/default/objects/Call_Center_Compliance__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Call Center Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Person</fullName>
            </value>
            <value>
                <fullName>Wrong Address</fullName>
            </value>
            <value>
                <fullName>Disconnected Line</fullName>
            </value>
            <value>
                <fullName>Business line</fullName>
            </value>
            <value>
                <fullName>invalid number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>