force-app/main/default/objects/Call_Center_Compliance__c/fields/Issue_Status_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status_Date_Stamp__c</fullName>
    <label>Issue Status Date Stamp</label>
    <type>Date</type>
</CustomField>