force-app/main/default/objects/Call_Center_Compliance__c/fields/Issue_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status_Notes__c</fullName>
    <label>Issue Status Notes</label>
    <type>TextArea</type>
</CustomField>