force-app/main/default/objects/Call_Center_Compliance__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>Call Center Compliance</relationshipLabel>
    <relationshipName>Call_Center_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>