force-app/main/default/objects/Call_Center_Compliance__c/validationRules/Issue_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Status</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR ( AND( ISNULL(  TEXT( Issue_Status__c )) ,ISNULL(  Issue_Status_Notes__c  ) ) , AND( NOT ( ISNULL(  TEXT( Issue_Status__c ))) ,NOT (ISNULL(  Issue_Status_Notes__c  ) ))) , False, True)</errorConditionFormula>
    <errorMessage>You must Fill out both Issue Status and Issue Status Notes</errorMessage>
</ValidationRule>