force-app/main/default/objects/Call_Center_Compliance__c/listViews/To_be_Verified.listView-meta.xml
<ListView>
    <fullName>To_be_Verified</fullName>
    <columns>NAME</columns>
    <columns>Issue__c</columns>
    <columns>Call_Center_Notes__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>Issue_Status_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>To be Verified</label>
</ListView>